@@ -1,9 +1,6 @@
 package com.github.scribejava.apis;
 
-import com.github.scribejava.apis.service.DoktornaraboteOAuthServiceImpl;
 import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.model.OAuthConfig;
-import com.github.scribejava.core.oauth.OAuth20Service;
 
 public class DoktornaraboteApi extends DefaultApi20 {
 
@@ -26,10 +23,5 @@ public class DoktornaraboteApi extends DefaultApi20 {
     @Override
     protected String getAuthorizationBaseUrl() {
         return "https://auth.doktornarabote.ru/OAuth/Authorize";
-    }
-
-    @Override
-    public OAuth20Service createService(OAuthConfig config) {
-        return new DoktornaraboteOAuthServiceImpl(this, config);
     }
 }
