@@ -1,6 +1,7 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
+import com.github.scribejava.core.builder.api.SignatureType;
 import com.github.scribejava.core.model.Verb;
 
 /**
@@ -38,5 +39,10 @@ public class FacebookApi extends DefaultApi20 {
     @Override
     protected String getAuthorizationBaseUrl() {
         return "https://www.facebook.com/v2.8/dialog/oauth";
+    }
+
+    @Override
+    public SignatureType getSignatureType() {
+        return SignatureType.BEARER_URI_QUERY_PARAMETER;
     }
 }
