@@ -1,6 +1,7 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
+import com.github.scribejava.core.builder.api.SignatureType;
 
 public class NaverApi extends DefaultApi20 {
     protected NaverApi() {
@@ -25,5 +26,10 @@ public class NaverApi extends DefaultApi20 {
     @Override
     protected String getAuthorizationBaseUrl() {
         return "https://nid.naver.com/oauth2.0/authorize";
+    }
+
+    @Override
+    public SignatureType getSignatureType() {
+        return SignatureType.BEARER_URI_QUERY_PARAMETER;
     }
 }
