@@ -1,6 +1,7 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
+import com.github.scribejava.core.builder.api.SignatureType;
 
 public class PinterestApi extends DefaultApi20 {
 
@@ -23,5 +24,10 @@ public class PinterestApi extends DefaultApi20 {
     @Override
     protected String getAuthorizationBaseUrl() {
         return "https://api.pinterest.com/oauth";
+    }
+
+    @Override
+    public SignatureType getSignatureType() {
+        return SignatureType.BEARER_URI_QUERY_PARAMETER;
     }
 }
