@@ -1,6 +1,7 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
+import com.github.scribejava.core.builder.api.SignatureType;
 import com.github.scribejava.core.model.Verb;
 
 /**
@@ -32,5 +33,10 @@ public class RenrenApi extends DefaultApi20 {
     @Override
     protected String getAuthorizationBaseUrl() {
         return "https://graph.renren.com/oauth/authorize";
+    }
+
+    @Override
+    public SignatureType getSignatureType() {
+        return SignatureType.BEARER_URI_QUERY_PARAMETER;
     }
 }
