@@ -1,6 +1,7 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
+import com.github.scribejava.core.builder.api.SignatureType;
 import com.github.scribejava.core.model.Verb;
 
 public class ViadeoApi extends DefaultApi20 {
@@ -29,5 +30,10 @@ public class ViadeoApi extends DefaultApi20 {
     @Override
     protected String getAuthorizationBaseUrl() {
         return "https://secure.viadeo.com/oauth-provider/authorize2";
+    }
+
+    @Override
+    public SignatureType getSignatureType() {
+        return SignatureType.BEARER_URI_QUERY_PARAMETER;
     }
 }
