@@ -87,7 +87,6 @@ public final class SalesforceExample {
         System.out.println("Full URL: " + url);
 
         final OAuthRequest request = new OAuthRequest(Verb.GET, url);
-        request.addHeader("Authorization", "Bearer " + accessToken.getAccessToken());
         final Response response = service.execute(request);
         System.out.println();
         System.out.println(response.getCode());
