@@ -1,6 +1,7 @@
 package com.github.scribejava.core.oauth;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
+import com.github.scribejava.core.builder.api.SignatureType;
 import com.github.scribejava.core.model.OAuthConfig;
 
 class OAuth20ApiUnit extends DefaultApi20 {
@@ -18,5 +19,10 @@ class OAuth20ApiUnit extends DefaultApi20 {
     @Override
     public OAuth20Service createService(OAuthConfig config) {
         return new OAuth20ServiceUnit(this, config);
+    }
+
+    @Override
+    public SignatureType getSignatureType() {
+        return SignatureType.BEARER_URI_QUERY_PARAMETER;
     }
 }
