@@ -1,5 +1,6 @@
 [SNAPSHOT]
  * Remove OAuthRequestAsync, just OAuthRequest. Request should know about sync vs async. Move default Http engine to JDKHttpClient.
+ * introduce SignatureType for OAuth2.0 to implement Bearer signing for the requests
 
 [3.4.1]
  * Drop deprecated methods
